Expose `PATCH /users` api
