# housetainer-domain/src/main/kotlin/com/housetainer/domain/model/user/UserResponse.kt
@@ -1,6 +1,7 @@
 package com.housetainer.domain.model.user
 
 import com.housetainer.domain.entity.auth.AuthProvider
+import com.housetainer.domain.entity.user.User
 import com.housetainer.domain.entity.user.UserStatus
 import com.housetainer.domain.entity.user.UserType
 
@@ -21,4 +22,25 @@ data class UserResponse(
     val status: UserStatus,
     val createTime: Long,
     val updateTime: Long
-)
+) {
+    companion object {
+        fun User.toUserResponse() = UserResponse(
+            userId = this.userId,
+            email = this.email,
+            authId = this.authId,
+            authProvider = this.authProvider,
+            name = this.name,
+            nickname = this.nickname,
+            gender = this.gender,
+            birthday = this.birthday,
+            phoneNumber = this.phoneNumber,
+            profileImage = this.profileImage,
+            countryCode = this.countryCode,
+            languageCode = this.languageCode,
+            type = this.type,
+            status = this.status,
+            createTime = this.createTime,
+            updateTime = this.updateTime
+        )
+    }
+}
