# housetainer-domain/src/main/kotlin/com/housetainer/domain/usecase/user/UpdateUserUseCase.kt
@@ -1,9 +1,9 @@
 package com.housetainer.domain.usecase.user
 
-import com.housetainer.domain.entity.user.User
 import com.housetainer.domain.model.user.UpdateUserRequest
+import com.housetainer.domain.model.user.UserResponse
 
 interface UpdateUserUseCase {
 
-    suspend fun updateUser(updateUserRequest: UpdateUserRequest): User
+    suspend fun updateUser(updateUserRequest: UpdateUserRequest): UserResponse
 }
